crates/keron-lang/tests/corpus/errors/check/struct_default_type_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: type mismatch: expected `Int`, found `String`
  --> 5:15
  |
5 |   port: Int = "eighty-eighty",
  |               ^^^^^^^^^^^^^^^
